# StandardDataStructures

./: CMakeLists.txt  README.md  main  main.cpp
.github/workflows/: cmake-single-platform.yml
StandardDataStructures/linear/: array.hpp  linear.hpp  linkedlist.cpp  list.hpp
Tests/: array  main.cpp
data_structures/: CMakeLists.txt
data_structures/linear/: CMakeLists.txt  array  array_iterator  dynamic_array  dynamic_array.cpp
data_structures/utils/: CMakeLists.txt  comp
linear/: CMakeLists.txt  array.hpp  list.hpp
tests/: CMakeLists.txt  tests.cpp
tests/linear_tests/: CMakeLists.txt  array_tests.cpp
utils/: CMakeLists.txt  utils.cpp  utils.hpp
